--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/*
+
+target/*
+
+Lab1/*
+Lab2/*
+Lab3/*
+
+logs
