--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.idea/*
+.idea
 
-target/*
-
-Lab1/*
-Lab2/*
-Lab3/*
+target
 
 logs
+*.iml
